@@ -1,3 +1,9 @@
+globus-gridftp-server-control (5.1-1+gt6.@distro@) @distro@; urgency=low
+
+  * fix mem error on empty mlsc responses
+
+ -- Globus Toolkit <support@globus.org>  Thu, 13 Jul 2017 11:27:52 -0500
+
 globus-gridftp-server-control (5.0-1+gt6.@distro@) @distro@; urgency=low
 
   * extend response_type to allow for ftp error codes
